Project

General

Profile

Actions

Bug #16364

closed

Crash when utilizing advisory locking API functions

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The advisory locking functions permit the image to be opened in R/O mode but also send header update notifications. Since the image is in R/O mode, the ImageWatcher wasn't initialized and cannot be used for sending update notifications. Re-introduce the static update notification helper method and use it for the advisory locking functions.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16460: jewel: Crash when utilizing advisory locking API functionsResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #16460: jewel: Crash when utilizing advisory locking API functions added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF