librbd: fix crash while using advisory locks with R/O image

Fixes: http://tracker.ceph.com/issues/16364
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 1007aea3d78ca5aead8a11f932da0c1d9d67259e)